<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login"
    android:padding="16dp"
    tools:context=".Login">


    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/allerta"
        android:lineSpacingExtra="10dp"
        android:textColor="@color/background"
        android:textStyle="bold"
        android:text="@string/welcome"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/signIntoContinue"
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome"
        android:textColor="@color/listItem"
        android:fontFamily="@font/antic"
        android:text="@string/signIntoContinue"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signIntoContinue"
        android:layout_marginTop="55dp"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout


            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:hint="@string/userName">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/fields"
                android:layout_centerHorizontal="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout


            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            app:passwordToggleTint="@color/background"
            app:passwordToggleEnabled="true">


            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:background="@color/fields"
                android:layout_below="@id/loginUsername"
                android:layout_centerHorizontal="true"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="50dp"
        android:text="@string/login"
        android:textColor="@color/login"
        android:textSize="15sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signIn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/newUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/listItem"
            android:layout_marginRight="5dp"
            android:text="@string/NewUser"
            android:fontFamily="@font/antic"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/registerHere"
            android:fontFamily="@font/antic"
            android:textStyle="bold"
            android:textColor="@color/background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="18sp" />

    </LinearLayout>
</RelativeLayout>